components/crud-web-apps/volumes/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: models-web-app-models-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /models
    match:
    - uri:
        prefix: /models/
    rewrite:
      uri: /
    route:
    - destination:
        host: models-web-app-service.$(VWA_NAMESPACE).svc.$(VWA_CLUSTER_DOMAIN)
        port:
          number: 80
